Finished iteration 3 : recipe page content
Finished recipe for malawax , added image , description, ingredients and steps

--- a/recipes/malawax.html
+++ b/recipes/malawax.html
@@ -12,6 +12,33 @@
 
     <a href="../index.html">Home</a>
 
+    <img src="https://i.ytimg.com/vi/MmVpE9BszVo/maxresdefault.jpg" alt="" height="400px" width="400px">
+    <p>Malawax (also spelled Malawah) is a sweet, tender, and slightly elastic pancake that is a staple of Somali
+        cuisine. Unlike American pancakes, it is typically made as one large, thin pancake that is cooked in a single
+        layer in a pan. It has a uniquely soft, chewy texture and is often flavored with cardamom and sometimes sugar.
+        It is commonly eaten for breakfast or as a snack, served with tea, honey, butter, or even a dollop of sour
+        cream. Its delightful flavor and simple ingredients have made it popular across the Horn of Africa and beyond.
+    </p>
+    <ul>
+        <li>1 cup all-purpose flour</li>
+        <li>1 tablespoon sugar (adjust to taste)</li>
+        <li>¼ teaspoon salt</li>
+        <li>1 teaspoon ground cardamom</li>
+        <li>1 large egg</li>
+        <li>1 cup milk (or water for a lighter version)</li>
+        <li>Butter or oil, for greasing the pan</li>
+    </ul>
+
+    <ol>
+        <li>Whisk dry ingredients (flour, sugar, salt, cardamom) in a bowl.</li>
+        <li>Add the egg and half the milk. Whisk into a smooth batter.</li>
+        <li>Whisk in the remaining milk until the batter is thin.</li>
+        <li>Let the batter rest for 15 minutes.</li>
+        <li>Heat a non-stick pan over medium heat with a little butter.</li>
+        <li>Pour in a ladle of batter and quickly swirl the pan to coat the bottom.</li>
+        <li>Cook for 1-2 minutes until set and the bottom is golden. Do not flip.</li>
+        <li>Slide onto a plate and serve warm with honey and butter.</li>
+    </ol>
 </body>
 
 </html>
