--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <h1>Odin Recipes</h1>
 
     <a href="./recipes/malawax.html">Malawax</a>
+    <a href="./recipes/somalispaghetti.html">Somali Spaghetti</a>
+    <a href="./recipes/Risotto.html">Risotto</a>
 </head>
 
 <body>
