--- a/recipes/malawax.html
+++ b/recipes/malawax.html
@@ -19,6 +19,9 @@
         It is commonly eaten for breakfast or as a snack, served with tea, honey, butter, or even a dollop of sour
         cream. Its delightful flavor and simple ingredients have made it popular across the Horn of Africa and beyond.
     </p>
+
+    <h3>Ingredients</h3>
+
     <ul>
         <li>1 cup all-purpose flour</li>
         <li>1 tablespoon sugar (adjust to taste)</li>
@@ -28,6 +31,8 @@
         <li>1 cup milk (or water for a lighter version)</li>
         <li>Butter or oil, for greasing the pan</li>
     </ul>
+
+    <h3>Steps</h3>
 
     <ol>
         <li>Whisk dry ingredients (flour, sugar, salt, cardamom) in a bowl.</li>
