added link to home page

--- a/recipes/Risotto.html
+++ b/recipes/Risotto.html
@@ -6,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Risotto</title>
 
+
 </head>
 
 <body>
+    <a href="../index.html">Home</a>
 
     <img src="https://static01.nyt.com/images/2025/02/25/multimedia/Lobster-Risotto-cftz/Lobster-Risotto-cftz-mediumSquareAt3X.jpg"
         alt="" height="400px" width="400px">
