--- a/recipes/somalispaghetti.html
+++ b/recipes/somalispaghetti.html
@@ -7,9 +7,13 @@
     <title>Suqaar</title>
 
 
+
 </head>
 
 <body>
+
+    <a href="../index.html">Home</a>
+
     <img src="https://www.tasteatlas.com/images/dishes/0685c8a02ce04f8f944704ccb74b5006.jpg" alt="" height="400px"
         width="400px">
     <p>Somali Spaghetti is a vibrant and flavorful fusion dish that beautifully blends Italian pasta with traditional
@@ -35,7 +39,7 @@
         <li>Fresh cilantro or parsley, for garnish</li>
     </ul>
 
-    <h3>Steps</h3>
+    <h3>Steps </h3>
 
     <ol>
         <li>Cook the spaghetti according to package directions until al dente. Drain and set aside.</li>
