Added CSS styles to index.html and added new font

--- a/index.html
+++ b/index.html
@@ -6,10 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipes</title>
     <h1>Odin Recipes</h1>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
 
-    <a href="./recipes/malawax.html">Malawax</a>
-    <a href="./recipes/somalispaghetti.html">Somali Spaghetti</a>
-    <a href="./recipes/Risotto.html">Risotto</a>
+
+    <div id="container">
+        <a href="./recipes/malawax.html" class="recipes">Malawax</a>
+        <a href="./recipes/somalispaghetti.html" class="recipes">Somali Spaghetti</a>
+        <a href="./recipes/Risotto.html" class="recipes">Risotto</a>
+
+    </div>
+
 </head>
 
 <body>
