added font and backgroud color to malawax.html and new image

--- a/recipes/malawax.html
+++ b/recipes/malawax.html
@@ -5,14 +5,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Malawax</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="/styles.css">
+
 </head>
 
-<body>
+<body class="malawax">
     <h1>Malawax</h1>
 
     <a href="../index.html">Home</a>
 
-    <img src="https://i.ytimg.com/vi/MmVpE9BszVo/maxresdefault.jpg" alt="" height="400px" width="400px">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/3/3d/Malawaax.jpg" alt="" id="malawaximg">
     <p>Malawax (also spelled Malawah) is a sweet, tender, and slightly elastic pancake that is a staple of Somali
         cuisine. Unlike American pancakes, it is typically made as one large, thin pancake that is cooked in a single
         layer in a pan. It has a uniquely soft, chewy texture and is often flavored with cardamom and sometimes sugar.
