fixed font and centered image and home button

--- a/recipes/malawax.html
+++ b/recipes/malawax.html
@@ -17,7 +17,7 @@
 <body class="malawax">
     <h1>Malawax</h1>
 
-    <a href="../index.html">Home</a>
+    <a href="../index.html" id="home">Home</a>
 
     <img src="https://upload.wikimedia.org/wikipedia/commons/3/3d/Malawaax.jpg" alt="" id="malawaximg">
     <p>Malawax (also spelled Malawah) is a sweet, tender, and slightly elastic pancake that is a staple of Somali
