Finished styling all 3 recipes and home page

--- a/recipes/Risotto.html
+++ b/recipes/Risotto.html
@@ -5,15 +5,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Risotto</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="/styles.css">
 
+<body class="Risotto">
 
-</head>
+    <h1>Risotto</h1>
 
-<body>
-    <a href="../index.html">Home</a>
+    <a href="../index.html" id="homebtn">Home</a>
 
     <img src="https://static01.nyt.com/images/2025/02/25/multimedia/Lobster-Risotto-cftz/Lobster-Risotto-cftz-mediumSquareAt3X.jpg"
-        alt="" height="400px" width="400px">
+        alt="" height="400px" width="400px" class="risottoimg">
     <p>This is a classic, creamy risotto from Northern Italy. The key to a perfect risotto is patience—slowly adding
         warm broth and stirring constantly helps the rice release its starches, creating a luxuriously creamy texture
         without any actual cream. It's a simple yet elegant dish that is incredibly comforting.
