--- a/recipes/somalispaghetti.html
+++ b/recipes/somalispaghetti.html
@@ -6,16 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Suqaar</title>
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="/styles.css">
 
+<body class="spaghetti">
 
-</head>
+    <h1>Sonalli Spaghetti Suqaar</h1>
+    <a href="../index.html" class="home">Home</a>
 
-<body>
-
-    <a href="../index.html">Home</a>
-
-    <img src="https://www.tasteatlas.com/images/dishes/0685c8a02ce04f8f944704ccb74b5006.jpg" alt="" height="400px"
-        width="400px">
+    <img src="https://www.tasteatlas.com/images/dishes/0685c8a02ce04f8f944704ccb74b5006.jpg" alt="" class="spaghettimg">
     <p>Somali Spaghetti is a vibrant and flavorful fusion dish that beautifully blends Italian pasta with traditional
         Somali spices. The key is the "suugo," a rich, tomato-based sauce often simmered with minced meat (suqaar),
         garlic, ginger, cumin, and coriander. It's a beloved comfort food for many Somali families, typically served for
